# awesome-hatch

./: LICENSE  README.md  README.md.jinja  awesome.yaml
.github/actions/awesome/: action.yaml  main.py  pyproject.toml  requirements.txt
