[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awesome-hatch"
description = 'A curated list of awesome hatch plugins and resources'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "chaojie", email = "hi@chaojie.fun" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.hatch.envs.default]
dependencies = [
  "PyYAML==5.3.1",
  "pydantic[dotenv]==1.7.2",
  "Jinja2",
  "PyGithub==1.55",
  "requests",
]
