[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "awesome-hatch"
description = 'A curated list of awesome hatch plugins and resources'
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "chaojie", email = "hi@chaojie.fun" },
]

[tool.hatch.envs.default]
dependencies = [
  "PyYAML==5.3.1",
  "pydantic[dotenv]==1.7.2",
  "Jinja2",
  "PyGithub==1.55",
  "requests",
]
